--- a/flash-package/pyproject.toml
+++ b/flash-package/pyproject.toml
@@ -6,6 +6,11 @@ authors = ["Christian Giessel"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/chgiesse/flash"
+package-mode = true
+packages = [
+    { include = "flash", from = "src" }
+]
+
 
 [tool.poetry.dependencies]
 python = ">=3.8, <3.13"
