--- a/flash-package/pyproject.toml
+++ b/flash-package/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dash-flash"
-version = "0.1.0-alpha.2"
+version = "0.1.0-beta.1"
 description = "Flash - async port of the Dash framework"
 authors = ["chgiesse"]
 license = "MIT"
