--- a/flash-package/pyproject.toml
+++ b/flash-package/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dash-flash"
-version = "0.1.2-cr.1"
+version = "0.1.2rc.2"
 description = "Flash - async port of the Dash framework"
 authors = ["chgiesse"]
 license = "MIT"
@@ -14,7 +14,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
-dash = ">=3.0,<3.1"
+dash = "^3.0.0rc1"
 Quart = "^0.19.9"
 quart-compress = "^0.2.1"
 
