--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "@lerna/filter-options": "^6.4.1",
     "husky": "8.0.3",
     "lerna": "^6.6.2",
-    "lint-staged": "^16.1.0"
+    "lint-staged": "^16.1.0",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "npm-run-all": "4.1.5",
     "rimraf": "^5.0.5"
   },
   "name": "dash"
